# llvm-rust-demo

./: Cargo.toml  README.md
calculate/: Cargo.toml
calculate/src/: main.rs
calculate/src/compiler/: context.rs  ir_builder.rs  mod.rs  module_provider.rs
gosamples/: README.md  main.go
gosamples/llvm-offical/: go.mod
gosamples/llvmir/: README.md  go.mod  go.sum  main.go
hello/src/: main.rs
llvm-39/: main.cpp
llvm-cpp/: CMakeLists.txt  main.cpp
llvm-hello-world-example/: main.cpp
simple/: Cargo.toml
simple/src/: main.rs
