[package]
name = "iron_kaleidoscope"
version = "0.0.1"
authors = ["Jauhien Piatlicki <jauhien@gentoo.org>"]

[dependencies]
docopt = "0.6"
regex = "1"
regex_macros = "*"
rustc-serialize = "0.3"
llvm-sys = "*"
#llvm-sys-100 = { package = "llvm-sys", version = "100", optional = true }
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }

[dependencies.iron_llvm]
git = "https://github.com/jauhien/iron-llvm.git"
